[package]
name = "hexagonfactory"
version = "0.1.0"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "shaders",
    "normal_map_generator",
    "sphereorder",
    "noise_gen",
]

[dependencies]
# Cubemap fork
bevy = { path = "../bevy" }
#bevy = "0.5"
arrayvec = "0.7.0"
shaders = { path = "./shaders" }
rand = "0.8.3"
sphereorder = { path = "./sphereorder" }
#bevy-inspector-egui = { path = "../bevy-inspector-egui" }

[patch.'https://github.com/bevyengine/bevy']
bevy = { path = "../bevy" }

[dependencies.hexasphere]
version = "3.3.0"
