[package]
name = "sphereorder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../../bevy" }
bevy_mod_raycast = { path = "../../bevy_mod_raycast" }
shaders = { path = "../shaders" }
noise_gen = { path = "../noise_gen" }
hexasphere = "3.3.0"
arrayvec = "0.7.0"
bevy_utils = "0.5.0"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
rand = "0.8.3"
